--- a/css/styles.css
+++ b/css/styles.css
@@ -626,10 +626,13 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 70px;
 }
 
+.footer-second {
+  margin-right: 93px;
+}
 .footer-text {
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--white-color);
@@ -665,6 +668,63 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 .footer-soc-icon {
   fill: var(--white-color);
+}
+
+.footer-form {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 20px;
+}
+
+.footer-subscription {
+  display: flex;
+}
+
+.footer-input {
+width: 358px;
+height: 50px;
+border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+background-color: transparent;
+padding-left: 16px;
+margin-right: 12px;
+}
+
+.footer-input::placeholder {
+  font-weight: 400;
+font-size: 16px;
+line-height: 1.25;
+letter-spacing: 0.03em;
+color: var(--tel-mail-color);
+}
+
+.footer-btn {
+  width: 200px;
+  height: 50px;
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.06em;
+color: var(--white-color);
+cursor: pointer;
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 10px;
+}
+
+.footer-btn-icon {
+
+
 }
 
 /*--------------- PORTFOLIO -------------*/
