--- a/css/styles.css
+++ b/css/styles.css
@@ -722,11 +722,6 @@ justify-content: center;
 gap: 10px;
 }
 
-.footer-btn-icon {
-
-
-}
-
 /*--------------- PORTFOLIO -------------*/
 
 .main-contant {
@@ -867,6 +862,7 @@ left: 50%;
 top: 50%;
 transform: translate(-50%, -50%) scaleY(1);
 transition: transform 250ms linear;
+padding: 40px;
 }
 
 .backdrop.is-hidden .modal {
@@ -895,3 +891,73 @@ justify-content: center;
   pointer-events: none;
 }
 
+.modal-title {
+  font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--title-text-color);
+margin-bottom: 12px;
+}
+
+.modal-label-text {
+  display: block;
+  font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: var(--primary-text-color);
+margin-bottom: 4px;
+}
+
+.modal-input {
+  width: 448px;
+  height: 40px;
+  left: 576px;
+  top: 314px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-bottom: 10px;
+  }
+
+  .modal-comment {
+    width: 100%;
+    height: 120px;
+left: 576px;
+top: 518px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+resize: none;
+padding: 12px 16px;
+margin-bottom: 20px;
+  }
+
+  .modal-comment::placeholder {
+font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: rgba(117, 117, 117, 0.5);
+  }
+
+.modal-btn-second {
+  font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.06em;
+color: var(--white-color);
+width: 200px;
+height: 50px;
+background: var(--accent-color);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border: none;
+cursor: pointer;
+margin: 0 auto;
+display: block;
+}
+
+.modal-btn-second {
+  margin-top: 30px;
+}
