--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 background-color: transparent;
+color: var(--white-color);
 padding-left: 16px;
 margin-right: 12px;
 }
@@ -841,6 +842,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+/*----------- MODAL -----------*/
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -885,6 +888,16 @@ align-items: center;
 justify-content: center;
 }
 
+.modal-close-icon {
+  transition-property: fill;
+  transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon:hover {
+fill: var(--accent-color);
+}
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -901,6 +914,10 @@ color: var(--title-text-color);
 margin-bottom: 12px;
 }
 
+.modal-field {
+  margin-bottom: 10px;
+}
+
 .modal-label-text {
   display: block;
   font-weight: 400;
@@ -911,6 +928,10 @@ color: var(--primary-text-color);
 margin-bottom: 4px;
 }
 
+.input-wrap {
+position: relative;
+}
+
 .modal-input {
   width: 448px;
   height: 40px;
@@ -918,7 +939,39 @@ margin-bottom: 4px;
   top: 314px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  margin-bottom: 10px;
+  padding-left: 42px;
+  outline: transparent;
+
+  transition-property: border;
+  transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .modal-input:focus {
+border: 1px solid var(--accent-color);
+  }
+
+  .modal-comment:focus {
+    border: 1px solid var(--accent-color);
+  }
+
+  .modal-input:focus + .modal-input-icon {
+    fill: var(--accent-color);
+  }
+
+  .modal-input-icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 12px;
+
+    transition-property: fill;
+  transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .modal-field-comment {
+    margin-bottom: 20px;
   }
 
   .modal-comment {
@@ -928,17 +981,64 @@ left: 576px;
 top: 518px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
+outline: transparent;
 resize: none;
 padding: 12px 16px;
-margin-bottom: 20px;
+
+transition-property: border;
+  transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .modal-comment::placeholder {
+  .check-text {
+    display: flex;
+    align-items: center;
+  }
+
+   .check-text span {
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--title-text-color);
+    border-radius: 2px;
+    margin-right: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+  }
+
+  .check-privacy {
+color: var(--accent-color);
+text-decoration: underline;
+  }
+
+  .input-check:checked + .check-text span {
+    background-color: var(--accent-color);
+    border-color: transparent;
+    fill: var(--white-color);
+  }
+
+  .check-text span {
+    transition-property: border-color;
+  transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .input-check:focus + .check-text span {
+    border-color: var(--accent-color)
+  }
+
+   .modal-comment::placeholder {
 font-weight: 400;
 font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.01em;
 color: rgba(117, 117, 117, 0.5);
+  }
+
+  .modal-field-check {
+    margin-bottom: 30px;
   }
 
 .modal-btn-second {
@@ -952,12 +1052,8 @@ height: 50px;
 background: var(--accent-color);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
-border: none;
+border-color: transparent;
 cursor: pointer;
 margin: 0 auto;
 display: block;
-}
-
-.modal-btn-second {
-  margin-top: 30px;
 }
